--- a/LabTask1sln/LabTask1/LabTask1.csproj
+++ b/LabTask1sln/LabTask1/LabTask1.csproj
@@ -124,6 +124,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DataBase\Admin.cs" />
+    <Compile Include="Models\DataBase\Database.cs" />
+    <Compile Include="Models\DataBase\Department.cs" />
+    <Compile Include="Models\DataBase\Student.cs" />
     <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
