--- a/4-tier_web_api/DAL/App.config
+++ b/4-tier_web_api/DAL/App.config
@@ -11,5 +11,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="StudentMSEntities" connectionString="metadata=res://*/StudentMS.csdl|res://*/StudentMS.ssdl|res://*/StudentMS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TA52;initial catalog=StudentMS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="StudentMSEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ta52;initial catalog=StudentMS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
